# rfrp

./: .gitignore  Cargo.toml  README.md
config/: rfrp-configs-c-p2p.json  rfrp-configs-c.json  rfrp-configs-s.json  rfrp-configs.json
rfrp/: Cargo.toml
rfrp-client/: Cargo.toml
rfrp-config/: Cargo.toml
rfrp-config/src/config_info/: base_info_getter.rs  base_types.rs
rfrp-main/: Cargo.toml
rfrp-main/src/: lib.rs
rfrp-server/: Cargo.toml
rfrp/src/: main.rs  rfrp_init.rs
rfrp_client/: Cargo.toml
rfrp_client/src/: lib.rs  p2p.rs  run_proxy.rs
rfrp_client/src/run_proxy/: p2p_proxy.rs
rfrp_client/src/tests/: p2p_tests.rs
rfrp_config/: Cargo.toml
rfrp_config/src/: config_info.rs  config_parser.rs  lib.rs
rfrp_config/src/config_info/: base_info_getter.rs  base_info_ops.rs  base_types.rs
rfrp_config/tests/: config_validation.rs
rfrp_main/: Cargo.toml
rfrp_main/src/: lib.rs
rfrp_proto/: Cargo.toml
rfrp_proto/src/: coalesce.rs  compress.rs  crypto.rs  frame_decode.rs  frame_encode.rs  frame_handle.rs  frame_types.rs  handshake.rs  lib.rs
rfrp_proto/tests/: crypto.rs  frame_serde.rs  handshake_test.rs  roundtrip.rs
rfrp_server/: Cargo.toml
rfrp_server/src/: lib.rs  run_proxy.rs
