[workspace]
members = ["rfrp", "rfrp_client", "rfrp_config", "rfrp_main", "rfrp_server", "rfrp_proto"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["lijianqii"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.28"
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
