[package]
name = "rfrp_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
rfrp_config = { path = "../rfrp_config" }
rfrp_proto = { path = "../rfrp_proto" }
