[package]
name = "rfrp_main"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
log = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
rfrp_config = { path = "../rfrp_config" }
