[package]
name = "rfrp_main"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true }
rfrp_config = { path = "../rfrp_config" }
rfrp_server = { path = "../rfrp_server" }
rfrp_proto = { path = "../rfrp_proto" }
