[package]
name = "rfrp_proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
rfrp_config = { path = "../rfrp_config" }
