[package]
name = "rfrp_proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
rfrp_config = { path = "../rfrp_config" }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rmp-serde = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
