[package]
name = "rfrp_server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
rfrp_config = { path = "../rfrp_config" }
rfrp_proto = { path = "../rfrp_proto" }
tokio-util = { version = "0.7.17", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
futures = { version = "0.3.32" }
bytes = { version = "1" }
